Unknown PPPoE TAGs which are present in a PPPoE discovery packet are not displayed under "PPPoE Tags" subtree/section
This issue was migrated from bug 2458 in our old bug tracker.
Original bug information:
Reporter: Jew…@t-s…
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 0.99.8
Attachments:
unknown_pppoe_tags.pcap: capture file PPPoE discovery packets of two different sessions