Fix for bug 2458: Adding dissection for more recent PPPoE tags.

svn path=/trunk/; revision=25031